# deepdir

./: .gitignore  README.md  pyproject.toml
deepdir/controller/: controller.py
deepdir/core/: config.py  dictionary.py  fuzzer.py
deepdir/view/: terminal.py
