[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deepdir-cli"
version = "0.4.4"
authors = [
  { name="TobiasGuta, email="tobias_arevalo@protonmail.com" },
]
description = "A modified version of dirsearch"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
]
dependencies = [
    "PySocks>=1.7.1",
    "Jinja2>=3.0.0",
    "defusedxml>=0.7.0",
    "pyopenssl>=21.0.0",
    "requests>=2.27.0",
    "requests_ntlm>=1.3.0",
    "colorama>=0.4.4",
    "ntlm_auth>=1.5.0",
    "beautifulsoup4>=4.8.0",
    "mysql-connector-python>=8.0.20",
    "psycopg[binary]>=3.0",
    "defusedcsv>=2.0.0",
    "requests-toolbelt>=1.0.0",
    "setuptools>=66.0.0",
    "httpx>=0.27.2",
    "httpx-ntlm>=1.4.0",
    "cloudscraper>=1.2.60",
    "fake-useragent>=1.1.1",
]

[project.scripts]
deepdir-cli = "deepdir.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["deepdir*"]

[tool.setuptools.package-data]
deepdir = ["db/*", "*.ini", "db/*.txt", "db/*.json"]
